Add get drives and rework search

--- a/FileManager/FileManager.csproj
+++ b/FileManager/FileManager.csproj
@@ -172,5 +172,8 @@
       <Version>4.5.5</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\drives.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
